--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "template",
+  "name": "binary-search-tree",
   "version": "1.0.0",
-  "description": "a template",
+  "description": "DSA exercise: create a binary search tree using JavaScript",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
